# ai-email-classification-poc

./: README.md  departments.json  docker-compose.yml  example.env  pyrightconfig.json
.github/workflows/: ci.yml
notification-service/: Dockerfile  pyproject.toml
notification-service/src/app/: main.py
notification-service/src/app/controllers/: routers.py
notification-service/src/app/models/: ports.py
notification-service/src/app/repositories/: smtp_adapter.py
notification-service/src/app/services/: email_service.py
notification-service/src/notification_service/: config.py  main.py
notification-service/src/notification_service/api/: routers.py
notification-service/src/notification_service/infrastructure/: smtp_adapter.py
notification-service/tests/: test_email.py
router-service/: Dockerfile  main.py  pyproject.toml  test_schema.py
router-service/src/app/: main.py
router-service/src/app/controllers/: routers.py
router-service/src/app/models/: schemas.py
router-service/src/app/repositories/: department_repository.py  notification_adapter.py
router-service/src/app/services/: agent.py  message_service.py
router-service/src/router_service/: config.py  main.py
router-service/src/router_service/api/: routers.py  schemas.py
router-service/src/router_service/domain/: agent.py  ports.py  routing.py
router-service/src/router_service/infrastructure/: notification_adapter.py
router-service/tests/: test_routing.py
