[project]
name = "router-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.15.0",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
